# pyopengm

./: .gitmodules  CMakeLists.txt  README.md
src/python/: CMakeLists.txt
src/python/lib/: CMakeLists.txt  fid.cxx  gm.cxx  opengm.cxx
src/python/module/opengm/: __init__.py
